syntax = "proto3";

package statistics;

option go_package = "proto/statistics";

service StatisticsService {
  rpc CreateStatistic(StatisticRequest) returns (StatisticResponse);
}

message StatisticRequest {
  int64 limit = 1;
  int64 first_number = 2;
  int64 second_number = 3;
  string first_replacement_str = 4;
  string second_replacement_str = 5;
}

message StatisticResponse {
  string request_id = 1;
}